--- a/index.html
+++ b/index.html
@@ -16,10 +16,19 @@
 
 <body>
 
-  
-     
   <div class="container home">
-   
+    <header>
+      <h1>Fun Bus</h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About Us</li>
+          <li>Blog</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+    
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
