--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 </head>
 
 <body>
+      <header>
+        <div class="container navigation" >
+          <h1>Fun Bus</h1>
+          <nav>
+            <a href="">Home</a>
+            <a href="">About Us</a>
+            <a href="">Blog</a>
+            <a href="">Contact</a>
+          </nav>
+        </div>
+      </header>
 
   <div class="container home">
-    <header>
-      <h1>Fun Bus</h1>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About Us</li>
-          <li>Blog</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
-    </header>
-    
+ 
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
