--- a/index.html
+++ b/index.html
@@ -15,19 +15,28 @@
 </head>
 
 <body>
-      <header>
-        <div class="container navigation" >
-          <h1>Fun Bus</h1>
-          <nav>
-            <a href="">Home</a>
-            <a href="">About Us</a>
-            <a href="">Blog</a>
-            <a href="">Contact</a>
-          </nav>
-        </div>
-      </header>
+
+  <header>
+    <div class="container navigation" >
+      <h1>Fun Bus</h1>
+      <nav>
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
+  </header>
 
   <div class="container home">
+
+    <section class="main-header" >
+      <div><img src="/img/fun-bus.jpg" alt=""></div>
+      <div class="text-content content-section">
+        <h2>Welcome to Fun Bus</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+      </div>
+    </section>
  
     <section class="content-section">
       <div class="text-content">
